@@ -1,0 +1,112 @@
+<?php
+/*
+ * ZenMagick - Extensions for zen-cart
+ * Copyright (C) 2006-2008 ZenMagick
+ *
+ * Portions Copyright (c) 2003 The zen-cart developers
+ * Portions Copyright (c) 2003 osCommerce
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+?>
+<?php
+
+
+/**
+ * Max field length validation rule based on the database column length.
+ *
+ * @author mano
+ * @package org.zenmagick.validation.rules
+ * @version $Id$
+ */
+class ZMMaxFieldLengthRule extends ZMRule {
+    private $table;
+    private $column;
+    private $max;
+
+
+    /**
+     * Create new min length rule.
+     *
+     * @param string name The field name.
+     * @param string table The database table.
+     * @param string column The table column.
+     * @param string msg Optional message.
+     */
+    function __construct($name, $table, $column, $msg=null) {
+        parent::__construct($name, "%s must not be longer than %s characters.", $msg);
+        $this->table = $table;
+        $this->column = $column;
+        $this->max = -1;
+    }
+
+    /**
+     * Destruct instance.
+     */
+    function __destruct() {
+        parent::__destruct();
+    }
+
+
+    /**
+     * Validate the given request data.
+     *
+     * @param array req The request data.
+     * @return boolean <code>true</code> if the value for <code>$name</code> is valid, <code>false</code> if not.
+     */
+    function validate($req) {
+        return (!isset($req[$this->getName()]) || empty($req[$this->getName()]) || $this->getMaxFieldLength() >= strlen(trim($req[$this->getName()])));
+    }
+
+    /**
+     * Get the field length.
+     *
+     * @return int The max field length.
+     */
+    protected function getMaxFieldLength() {
+        if (0 > $this->max) {
+            $this->max = ZMLayout::instance()->getFieldLength($this->table, $this->column);
+        }
+
+        return $this->max;
+    }
+
+    /**
+     * Return an appropriate error message.
+     *
+     * @return string Localized error message.
+     */
+    function getErrorMsg() {
+        return zm_l10n_get((null != $this->getMsg() ? $this->getMsg() : $this->getDefaultMsg()), $this->getName(), $this->getMaxFieldLength());
+    }
+
+
+    /**
+     * Create JS validation call.
+     *
+     * @return string Formatted JavaScript .
+     */
+    function toJSString() {
+        $js = "    new Array('max'";
+        $js .= ",'".$this->getName()."'";
+        $js .= ",'".addslashes($this->getErrorMsg())."'";
+        $js .= ",".$this->getMaxFieldLength();
+        $js .= ")";
+        return $js;
+    }
+
+}
+
+?>
