@@ -61,6 +61,7 @@ case 'select': return -1 != elem.selectedIndex; break;
 return true;
 }
 function isMinLength(elem, min) { return ('' == elem.value || elem.value.length >= min); }
+function isMaxLength(elem, max) { return ('' == elem.value || elem.value.length <= max); }
 function isRegexp(elem, expr) { return ('' == elem.value || elem.value.match(expr)); }
 function isFieldMatch(elem1, elem2) { return elem1.value == elem2.value; }
 
@@ -76,6 +77,7 @@ for (var ii=0; ii<rules.length; ++ii) { var rule = rules[ii];
 switch (rule[0]) {
 case 'required': if (!isNotEmpty(form.elements[rule[1]])) { isValid = false; msg += '* ' + rule[2] + '\n'; } break;
 case 'min': if (!isMinLength(form.elements[rule[1]], rule[3])) { isValid = false; msg += '* ' + rule[2] + '\n'; } break;
+case 'max': if (!isMaxLength(form.elements[rule[1]], rule[3])) { isValid = false; msg += '* ' + rule[2] + '\n'; } break;
 case 'regexp': if (!isRegexp(form.elements[rule[1]], rule[3])) { isValid = false; msg += '* ' + rule[2] + '\n'; } break;
 case 'fieldMatch': if (!isFieldMatch(form.elements[rule[1]], form.elements[rule[3]])) { isValid = false; msg += '* ' + rule[2] + '\n'; } break;
 case 'date': if (!isDate(form.elements[rule[1]], rule[3])) { isValid = false; msg += '* ' + rule[2] + '\n'; } break;
